--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -40,7 +40,7 @@
 }
 
 .section-title {
-  font-family: 'Orbitron', 'Murmur', sans-serif;
+  font-family: var(--font-body);
   font-size: 64px;
   font-weight: 900;
   margin: 0 0 24px 0;
@@ -53,7 +53,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  letter-spacing: 2px;
+  letter-spacing: -1px;
   text-transform: uppercase;
   position: relative;
 
